<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="psa.citroenparking.ParkingActivity">

    <ImageView
        android:id="@+id/ivCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="car"
        android:src="@drawable/car"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h_car"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        tools:layout_editor_absoluteY="317dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clLines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivRL_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rl_background"
            android:src="@drawable/rl_background"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRL_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rl_01"
            android:src="@drawable/rl_01"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRL_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rl_02"
            android:src="@drawable/rl_02"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRL_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rl_03"
            android:src="@drawable/rl_03"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRL_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rl_04"
            android:src="@drawable/rl_04"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRL_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rl_05"
            android:src="@drawable/rl_05"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRLC_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rlc_background"
            android:src="@drawable/rlc_background"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRLC_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rlc_01"
            android:src="@drawable/rlc_01"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRLC_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rlc_02"
            android:src="@drawable/rlc_02"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRLC_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rlc_03"
            android:src="@drawable/rlc_03"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRLC_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rlc_04"
            android:src="@drawable/rlc_04"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRLC_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rlc_05"
            android:src="@drawable/rlc_05"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_v"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRRC_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rrc_background"
            android:src="@drawable/rrc_background"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRRC_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rrc_01"
            android:src="@drawable/rrc_01"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRRC_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rrc_02"
            android:src="@drawable/rrc_02"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRRC_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rrc_03"
            android:src="@drawable/rrc_03"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRRC_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rrc_04"
            android:src="@drawable/rrc_04"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRRC_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rrc_05"
            android:src="@drawable/rrc_05"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRR_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rr_background"
            android:src="@drawable/rr_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRR_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rr_01"
            android:src="@drawable/rr_01"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRR_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rr_02"
            android:src="@drawable/rr_02"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRR_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rr_03"
            android:src="@drawable/rr_03"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRR_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rr_04"
            android:src="@drawable/rr_04"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivRR_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rr_05"
            android:src="@drawable/rr_05"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_v"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_h"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="481dp"
            tools:layout_editor_absoluteY="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="264dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
